@@ -1,4 +1,4 @@
-/**
+/*
  * The MIT License
  * Copyright © 2014-2019 Ilkka Seppälä
  *
@@ -20,19 +20,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.abstractdocument;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-
-import org.junit.jupiter.api.Test;
-
 import com.iluwatar.abstractdocument.domain.Car;
 import com.iluwatar.abstractdocument.domain.Part;
 import com.iluwatar.abstractdocument.domain.enums.Property;
+import java.util.List;
+import java.util.Map;
+import org.junit.jupiter.api.Test;
 
 /**
  * Test for Part and Car
@@ -48,27 +46,27 @@ public class DomainTest {
 
   @Test
   public void shouldConstructPart() {
-    Map<String, Object> partProperties = new HashMap<>();
-    partProperties.put(Property.TYPE.toString(), TEST_PART_TYPE);
-    partProperties.put(Property.MODEL.toString(), TEST_PART_MODEL);
-    partProperties.put(Property.PRICE.toString(), TEST_PART_PRICE);
-    Part part = new Part(partProperties);
-
-    assertEquals(TEST_PART_TYPE, part.getType().get());
-    assertEquals(TEST_PART_MODEL, part.getModel().get());
-    assertEquals(TEST_PART_PRICE, part.getPrice().get());
+    var partProperties = Map.of(
+        Property.TYPE.toString(), TEST_PART_TYPE,
+        Property.MODEL.toString(), TEST_PART_MODEL,
+        Property.PRICE.toString(), (Object) TEST_PART_PRICE
+    );
+    var part = new Part(partProperties);
+    assertEquals(TEST_PART_TYPE, part.getType().orElseThrow());
+    assertEquals(TEST_PART_MODEL, part.getModel().orElseThrow());
+    assertEquals(TEST_PART_PRICE, part.getPrice().orElseThrow());
   }
 
   @Test
   public void shouldConstructCar() {
-    Map<String, Object> carProperties = new HashMap<>();
-    carProperties.put(Property.MODEL.toString(), TEST_CAR_MODEL);
-    carProperties.put(Property.PRICE.toString(), TEST_CAR_PRICE);
-    carProperties.put(Property.PARTS.toString(), Arrays.asList(new HashMap<>(), new HashMap<>()));
-    Car car = new Car(carProperties);
-
-    assertEquals(TEST_CAR_MODEL, car.getModel().get());
-    assertEquals(TEST_CAR_PRICE, car.getPrice().get());
+    var carProperties = Map.of(
+        Property.MODEL.toString(), TEST_CAR_MODEL,
+        Property.PRICE.toString(), TEST_CAR_PRICE,
+        Property.PARTS.toString(), List.of(Map.of(), Map.of())
+    );
+    var car = new Car(carProperties);
+    assertEquals(TEST_CAR_MODEL, car.getModel().orElseThrow());
+    assertEquals(TEST_CAR_PRICE, car.getPrice().orElseThrow());
     assertEquals(2, car.getParts().count());
   }
 
