@@ -1,4 +1,4 @@
-/**
+/*
  * The MIT License
  * Copyright © 2014-2019 Ilkka Seppälä
  *
@@ -20,27 +20,24 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package domainapp.fixture.scenarios;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
 import com.google.common.collect.Lists;
-
-import org.apache.isis.applib.fixturescripts.FixtureScript;
-
 import domainapp.dom.modules.simple.SimpleObject;
 import domainapp.fixture.modules.simple.SimpleObjectCreate;
 import domainapp.fixture.modules.simple.SimpleObjectsTearDown;
+import java.util.Collections;
+import java.util.List;
+import org.apache.isis.applib.fixturescripts.FixtureScript;
 
 
 /**
- * Create a bunch of simple Objects
+ * Create a bunch of simple Objects.
  */
 public class RecreateSimpleObjects extends FixtureScript {
 
-  public final List<String> names = Collections.unmodifiableList(Arrays.asList("Foo", "Bar", "Baz",
+  public final List<String> names = Collections.unmodifiableList(List.of("Foo", "Bar", "Baz",
       "Frodo", "Froyo", "Fizz", "Bip", "Bop", "Bang", "Boo"));
 
   // region > number (optional input)
